@@ -6,6 +6,7 @@ import hivens.core.api.model.ServerProfile
 import hivens.core.data.InstanceProfile
 import hivens.core.data.SessionData
 import hivens.launcher.network.ServerProtocolConfig
+import hivens.launcher.runtime.loader.ResolvedRuntime
 import org.slf4j.LoggerFactory
 import java.io.File
 import java.nio.file.Path
@@ -69,6 +70,16 @@ internal class GameCommandBuilder(
     fun getNativesDir(version: String): String {
         return getConfig(version).nativesDir
     }
+
+    /**
+     * Per-instance natives directory for a PACK launch. Unlike [getNativesDir]
+     * (the SC server path, limited to the hardcoded [VersionConfig] map), this
+     * works for any Minecraft version: the pack runtime is resolved generically,
+     * so the natives folder is just the conventional `bin/natives-<version>`.
+     * Using getNativesDir here threw "Unsupported client version" for every MC
+     * version outside the SC map (1.7.10 / 1.12.2 / 1.21.1).
+     */
+    fun packNativesDir(mcVersion: String): String = "bin/natives-$mcVersion"
 
     /**
      * Legacy SC server-centric entry point. Projects [serverProfile] +
@@ -174,7 +185,7 @@ internal class GameCommandBuilder(
             args.addAll(gcArgs)
         }
 
-        args.add("-Xms512M")
+        args.add("-Xms${minOf(memoryMB, 512)}M")
         args.add("-Xmx${memoryMB}M")
 
         // 7. Java 9+ Module Path (NeoForge / Modern Forge) dynamically resolved
@@ -240,6 +251,188 @@ internal class GameCommandBuilder(
         }
 
         return args
+    }
+
+    /**
+     * Profile-driven command for a pack-centric launch. Everything that varies
+     * by loader -- main class, classpath, jvm/game args (e.g. the FML tweak) --
+     * comes from the resolved [runtime], NOT the hardcoded [VersionConfig] map
+     * (which stays the SC server path's domain). Assets + libraries come from
+     * the SHARED roots; natives stay per-instance.
+     *
+     * Handles all three launch eras:
+     * - launchwrapper / Knot (vanilla, Forge <=1.12.2, Fabric, Quilt): plain
+     *   `-cp` + main class + game args; no arg templating.
+     * - modlauncher Forge 1.13-1.16: the modern `arguments` template (inherited
+     *   from vanilla) with `${...}` substitution, but launched off the classpath
+     *   with no JPMS module path.
+     * - BootstrapLauncher (Forge 1.17+, all NeoForge): same templating plus the
+     *   module path (`-p`) carried in the version json's jvm args.
+     *
+     * [javaMajor] decides `-noverify` (legitimate on Java 8, warns on 17+).
+     * [sharedLibrariesDir] backs the `${library_directory}` placeholder.
+     */
+    fun buildPackCommand(
+        javaExec: String,
+        memoryMB: Int,
+        gameDir: Path,
+        sharedAssetsDir: Path,
+        sharedLibrariesDir: Path,
+        nativesDirName: String,
+        versionLabel: String,
+        javaMajor: Int,
+        runtime: ResolvedRuntime,
+        session: SessionData,
+        jvmArgsOverride: String?,
+    ): List<String> {
+        val args = ArrayList<String>()
+        args.add(javaExec)
+
+        // BootstrapLauncher (1.17+/NeoForge) carries a JPMS module path; the
+        // modern `arguments` template (anything with a ${placeholder}) needs
+        // substitution and a self-built classpath -- modlauncher 1.13-1.16 has
+        // the template but no module path.
+        val usesModulePath = runtime.mainClass.contains("bootstraplauncher", ignoreCase = true)
+        val usesModernArgs = usesModulePath || runtime.jvmArgs.any { it.contains("\${") }
+        if (javaMajor <= 8) args.add("-noverify")
+        if (System.getProperty("os.name").lowercase().contains("mac")) {
+            args.add("-XstartOnFirstThread")
+            args.add("-Djava.awt.headless=false")
+        }
+
+        // Launcher identity + authlib redirect. Reaching the menu does not need
+        // it; joining an SC-derived server does (the redirect points auth at the
+        // configured host, same as the SC path).
+        args.add("-Dminecraft.api.auth.host=${protocolConfig.baseUrl}/launcher/")
+        args.add("-Dminecraft.api.account.host=${protocolConfig.baseUrl}/launcher/")
+        args.add("-Dminecraft.api.session.host=${protocolConfig.baseUrl}/launcher/")
+        args.add("-Dminecraft.launcher.brand=${Branding.UPSTREAM_NAME}")
+        args.add("-Dminecraft.launcher.version=${Protocol.MIMIC_LAUNCHER_VERSION}")
+
+        val nativesPath = gameDir.resolve(nativesDirName).toAbsolutePath()
+        args.add("-Djava.library.path=$nativesPath")
+        args.add("-Dfml.ignoreInvalidMinecraftCertificates=true")
+
+        if (!jvmArgsOverride.isNullOrBlank()) {
+            args.addAll(jvmArgsOverride.trim().split(Regex("\\s+")))
+        }
+        if (usesModernArgs) {
+            args.addAll(modernJvmArgs(runtime, gameDir, sharedAssetsDir, sharedLibrariesDir, nativesPath, versionLabel))
+            // Java 9+ Vector API speeds up some mods (JEI, Ars Nouveau); only
+            // meaningful where the module path is in play.
+            if (usesModulePath) args.add("--add-modules=jdk.incubator.vector")
+        } else {
+            args.addAll(runtime.jvmArgs)
+        }
+        args.add("-Xms${minOf(memoryMB, 512)}M")
+        args.add("-Xmx${memoryMB}M")
+
+        args.add("-cp")
+        args.add(if (usesModernArgs) modernClasspath(runtime) else packClasspath(runtime))
+        args.add(runtime.mainClass)
+
+        args.add("--username"); args.add(session.playerName)
+        args.add("--version"); args.add(versionLabel)
+        args.add("--gameDir"); args.add(gameDir.toAbsolutePath().toString())
+        args.add("--assetsDir"); args.add(sharedAssetsDir.toAbsolutePath().toString())
+        args.add("--assetIndex"); args.add(runtime.assetIndexId)
+        args.add("--uuid"); args.add(session.uuid)
+        args.add("--accessToken"); args.add(session.accessToken)
+        args.add("--userProperties"); args.add("{}")
+        args.add("--userType"); args.add("mojang")
+        args.addAll(runtime.gameArgs)
+
+        return args
+    }
+
+    /**
+     * Ordered `-cp` for a pack: bootstrap jars (launchwrapper / asm /
+     * bootstraplauncher) first, then the client jar, then the rest -- mirrors
+     * the proven legacy Forge classpath ordering. Mods are NOT here; the loader
+     * scans the per-instance mods/ dir.
+     */
+    private fun packClasspath(runtime: ResolvedRuntime): String {
+        val libPaths = runtime.libraries.map { it.path }
+        val (boot, rest) = libPaths.partition { p ->
+            val n = p.fileName.toString().lowercase()
+            n.contains("launchwrapper") || n.contains("asm") || n.contains("bootstraplauncher")
+        }
+        // listOf(clientJar), NOT `+ clientJar`: a Path is Iterable<Path> over its
+        // name segments, so `List<Path> + Path` would spread the client jar into
+        // its path components instead of appending it as one classpath entry.
+        return (boot + listOf(runtime.clientJar) + rest)
+            .joinToString(File.pathSeparator) { it.toAbsolutePath().toString() }
+    }
+
+    /**
+     * Full `-cp` for a modern (templated) launch: the resolved libraries only,
+     * NOT the vanilla client jar. Modern Forge/NeoForge load minecraft from the
+     * installer's processor output (the slim/srg client) through FML's own path
+     * locator; putting the vanilla client on `-cp` too yields a second module
+     * named `minecraft` and "reads more than one module named minecraft". Boot
+     * modules stay on `-cp` -- the version json's `-DignoreList` tells
+     * BootstrapLauncher which entries to keep flat versus promote to modules,
+     * mirroring the official launcher.
+     */
+    private fun modernClasspath(runtime: ResolvedRuntime): String =
+        runtime.libraries.joinToString(File.pathSeparator) { it.path.toAbsolutePath().toString() }
+
+    /**
+     * Resolves the modern `arguments.jvm` template to concrete tokens. The
+     * version json's `${...}` placeholders are substituted from the known
+     * paths; the `-cp ${classpath}` pair and any `-Djava.library.path` are
+     * dropped because the builder emits its own, while `-p <module path>` is
+     * kept (its value substituted) so BootstrapLauncher gets the exact boot
+     * module set the installer chose.
+     */
+    private fun modernJvmArgs(
+        runtime: ResolvedRuntime,
+        gameDir: Path,
+        sharedAssetsDir: Path,
+        sharedLibrariesDir: Path,
+        nativesPath: Path,
+        versionLabel: String,
+    ): List<String> {
+        val substitutions = mapOf(
+            $$"${library_directory}" to sharedLibrariesDir.toAbsolutePath().toString(),
+            $$"${classpath_separator}" to File.pathSeparator,
+            $$"${version_name}" to versionLabel,
+            $$"${natives_directory}" to nativesPath.toString(),
+            $$"${assets_root}" to sharedAssetsDir.toAbsolutePath().toString(),
+            $$"${game_directory}" to gameDir.toAbsolutePath().toString(),
+            $$"${primary_jar}" to runtime.clientJar.toAbsolutePath().toString(),
+            $$"${launcher_name}" to Branding.UPSTREAM_NAME,
+            $$"${launcher_version}" to Protocol.MIMIC_LAUNCHER_VERSION,
+        )
+        fun substitute(token: String): String {
+            var result = token
+            for ((placeholder, value) in substitutions) result = result.replace(placeholder, value)
+            return result
+        }
+
+        val jvm = runtime.jvmArgs
+        val out = ArrayList<String>(jvm.size)
+        var i = 0
+        while (i < jvm.size) {
+            val token = jvm[i]
+            when {
+                token == "-cp" || token == "-classpath" || token == "--class-path" ->
+                    i += if (i + 1 < jvm.size) 2 else 1
+                token == "-p" || token == "--module-path" -> {
+                    if (i + 1 < jvm.size) {
+                        out.add(token)
+                        out.add(substitute(jvm[i + 1]))
+                        i += 2
+                    } else i += 1
+                }
+                token == $$"${classpath}" || token.startsWith("-Djava.library.path") -> i += 1
+                else -> {
+                    out.add(substitute(token))
+                    i += 1
+                }
+            }
+        }
+        return out
     }
 
     private fun getConfig(version: String): VersionConfig {
